improved ENN delay breaking, fixed Project_0